# mnist-audio

./: .coverage  .gitignore  README.md  params.yaml  pyproject.toml
src/mnist_audio/: config.py
src/mnist_audio/api/: dependencies.py  main.py  schemas.py
src/mnist_audio/data/: __init__.py  cache.py  dataset.py  metadata.py
src/mnist_audio/inference/: __init__.py  predictor.py
src/mnist_audio/models/: __init__.py  cnn_model.py  gan_model.py
src/mnist_audio/preprocessing/: __init__.py  preprocessor.py  vad.py
src/mnist_audio/training/: gan_trainer.py  trainer.py
src/mnist_audio/utils/: torch_utils.py
src/scripts/: download_data.py  infer_gan.py  train.py  train_clf.py  train_gan.py
tests/: conftest.py  factories.py
tests/fixtures/: app.py  model.py
tests/unit/mnist_audio/api/: test_main.py
tests/unit/mnist_audio/data/: test_cache.py  test_dataset.py
tests/unit/mnist_audio/inference/: test_predictor.py
tests/unit/mnist_audio/models/: test_cnn_model.py
