[project]
name = "mnist-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "kaggle>=1.8.3",
    "librosa>=0.11.0",
    "polars>=1.31.0",
    "pyarrow>=23.0.0",
    "silero-vad>=5.1.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
    "taskipy>=1.14.1",
    "tqdm>=4.67.1",
    "factory-boy>=3.3.3",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 79
extend-exclude = ['notebooks']

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["F401"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PT', 'PD']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
pre_test = 'task lint'
test = 'PYTHONPATH=. pytest --cov=src --cov=scripts -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
train_clf = 'PYTHONPATH=. python src/scripts/train_clf.py'
train_gan = 'PYTHONPATH=. python src/scripts/train_gan.py'
